--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                           <button type="button" class="tn btn-outline-dark"id="boton">enviar</button>
 
                     </form>
+                    <div class="containe">
+                      <div class="row row-cols-1 row-cols-md-3 g-4" id="padre">
+              
+                      </div>
+                  </div>
 
                 </div>
             </div>
